crates/xmtp_macro/tests/ui/retryable/on_union.rs
use xmtp_macro::Retryable;

#[derive(Retryable)]
union U {
    a: u32,
    b: f32,
}

fn main() {}
